--- a/index.html
+++ b/index.html
@@ -4,22 +4,24 @@
     <meta charset="UTF-8">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <title>Form</title>  
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>  
 <body>  
+    
     <h1>Form Login</h1>  
+    <form action="" method="post"></form>
+        <div class="mb-3">
+            <label for="username" class="form-label">Username</label>
+            <input type="text" class="form-control" id="username" name="username">
+        </div> 
+        <div class="mb-3">
+            <label for="password" class="form-label">Password</label>
+            <input type="password" class="form-control" id="password" name="password">
+        </div>
+        <button type="submit" class="btn btn-primary">Login</button>
 
-    <form action="" method="POST">  
-        <div class="form-group">  
-            <label for="username">Username</label>  
-            <input type="text" name="username" placeholder="Input Nama Anda" required>  
-        </div>  
-        <div class="form-group">  
-            <label for="password">Password</label>  
-            <input type="password" name="password" placeholder="Input Password Anda" required autocomplete="on">  
-        </div>  
-        <div class="col-md-6">  
-            <button type="submit">Login</button>  
-        </div>  
     </form>  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </body>  
 </html>
